[gd_scene load_steps=12 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://fonts/Impact.tres" type="DynamicFont" id=2]
[ext_resource path="res://fonts/Fighter.tres" type="DynamicFont" id=3]
[ext_resource path="res://images/acid_trip.jpg" type="Texture" id=4]
[ext_resource path="res://images/acid_trip_no_text.jpg" type="Texture" id=5]
[ext_resource path="res://images/acid_trip_inverted.jpg" type="Texture" id=6]
[ext_resource path="res://sounds/hit.wav" type="AudioStream" id=7]

[sub_resource type="InputEventAction" id=1]
action = "ui_select"

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[sub_resource type="InputEventAction" id=3]
action = "ui_select"

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 3 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ScoreLabel" type="Label" parent="."]
anchor_right = 1.0
margin_left = 25.0
margin_top = 25.0
margin_right = -490.0
margin_bottom = 85.0
custom_fonts/font = ExtResource( 2 )

[node name="MessageLabel" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -390.0
margin_bottom = 340.0
custom_fonts/font = ExtResource( 3 )
text = "Thanos      vs cats!"
align = 1
valign = 1
autowrap = true

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -107.0
margin_top = -240.0
margin_right = 108.0
margin_bottom = -130.0
custom_fonts/font = ExtResource( 2 )
shortcut = SubResource( 2 )
text = "START"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="SnapButton" type="TextureButton" parent="."]
visible = false
margin_left = 410.0
margin_top = 820.0
margin_right = 922.0
margin_bottom = 1108.0
rect_scale = Vector2( 0.4, 0.4 )
shortcut = SubResource( 4 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 6 )

[node name="Label" type="Label" parent="SnapButton"]
margin_left = 100.0
margin_top = -75.0
margin_right = 420.0
margin_bottom = -6.0
custom_fonts/font = ExtResource( 2 )
text = "PRESS [SPACE]"

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -5.0
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
[connection signal="pressed" from="SnapButton" to="." method="_on_SnapButton_pressed"]
